--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+        	<groupId>com.rodrigofreund.salesmanager</groupId>
+        	<artifactId>salesmanager_domain</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
